// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File upload info row snapshots tests renders default file upload info row component 1`] = `
<div
  className="fileSummary"
>
  <FontIcon
    className="material-icons"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    movie
  </FontIcon>
   
  s12345678_test_file_archive.zip
   
  <span>
    (
    5.31 GB
    )
  </span>
</div>
`;

exports[`File upload info row snapshots tests renders default file upload info row component 2`] = `
<div
  className="fileSummary"
>
  <FontIcon
    className="material-icons"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    photo
  </FontIcon>
   
  s12345678_test_file_archive.jpg
   
  <span>
    (
    0 Bytes
    )
  </span>
</div>
`;

exports[`File upload info row snapshots tests renders default file upload info row component 3`] = `
<div
  className="fileSummary"
>
  <FontIcon
    className="material-icons"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    insert_drive_file
  </FontIcon>
   
  s12345678_test_file_archive.iso
   
  <span>
    (
    NaN undefined
    )
  </span>
  <span
    className="uploadProgress"
  >
    5%
  </span>
</div>
`;
